<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ListPreference
        android:defaultValue="4"
        android:entries="@array/guesses_list"
        android:entryValues="@array/guesses_list"
        android:key="pref_numberOfChoice"
        android:persistent="true"
        android:summary="@string/number_of_choices_description"
        android:title="@string/number_of_choices" />

    <MultiSelectListPreference
        android:defaultValue="@array/years_list"
        android:entries="@array/films_list_for_settings"
        android:entryValues="@array/years_list"
        android:key="pref_yearsToInclude"
        android:persistent="true"
        android:summary="@string/film_years_description"
        android:title="@string/film_years"

        />

</PreferenceScreen>