<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/start_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wooden_floor">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_view_app"
        style="@style/AppNameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/start_activity_card1"
        style="@style/CardStart"
        app:layout_constraintRight_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="parent">

        <ImageView
            android:id="@+id/start_activity_image1"
            style="@style/ImageStart"
            android:contentDescription="@string/chernobyl_show_2019"
            android:src="@drawable/chernobyl" />
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/start_activity_card2"
        style="@style/CardStart"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintRight_toLeftOf="parent">

        <ImageView
            android:id="@+id/start_activity_image2"
            style="@style/ImageStart"
            android:contentDescription="@string/avengers_film"
            android:src="@drawable/avengers" />

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/start_activity_card3"
        style="@style/CardStart"
        android:translationZ="6dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="parent">

        <ImageView
            android:id="@+id/start_activity_image3"
            style="@style/ImageStart"
            android:contentDescription="@string/interstellar"
            android:src="@drawable/interstellar" />
    </com.google.android.material.card.MaterialCardView>

    <ProgressBar
        android:id="@+id/progress_bar"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="16dp"
        android:layout_margin="24dp"
        android:progress="10"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/start_activity_card4"
        style="@style/CardStart"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="parent">

        <ImageView
            android:id="@+id/start_activity_image4"
            style="@style/ImageStart"
            android:contentDescription="@string/comedy_from_ussr_about_ivan_iv"
            android:src="@drawable/ivan" />

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/start_activity_card5"
        style="@style/CardStart"
        android:layout_marginBottom="72dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="parent">

        <ImageView
            android:id="@+id/start_activity_image5"
            style="@style/ImageStart"
            android:contentDescription="@string/rick_and_morty"
            android:src="@drawable/rick_and_morty" />

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/start_activity_card6"
        style="@style/CardStart"
        android:layout_marginBottom="68dp"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintLeft_toRightOf="parent">

        <ImageView
            android:id="@+id/start_activity_image6"
            style="@style/ImageStart"
            android:contentDescription="@string/dark_knight_film"
            android:src="@drawable/dark_knight" />
    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>

