<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/start_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/start_activity_card1"
        style="@style/CardStart"
        android:layout_marginLeft="32dp"
        android:rotation="25"
        android:translationZ="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/start_activity_image1"
            style="@style/ImageStart"
            android:contentDescription="@string/chernobyl_show_2019"
            android:src="@drawable/chernobyl" />

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/start_activity_card2"
        style="@style/CardStart"
        android:rotation="-10"
        android:translationZ="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/start_activity_card1"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/start_activity_image2"
            style="@style/ImageStart"
            android:contentDescription="@string/avengers_film"
            android:src="@drawable/avengers" />

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/start_activity_card3"
        style="@style/CardStart"
        android:rotation="5"
        android:translationZ="6dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginRight="32dp"
        android:layout_marginEnd="32dp">

        <ImageView
            android:id="@+id/start_activity_image3"
            style="@style/ImageStart"
            android:contentDescription="@string/interstellar"
            android:src="@drawable/interstellar" />
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/start_activity_card4"
        style="@style/CardStart"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginBottom="80dp"
        android:rotation="-10"
        android:translationZ="4dp"
        app:layout_constraintBottom_toTopOf="@+id/progress_bar"
        app:layout_constraintLeft_toLeftOf="parent">

        <ImageView
            android:id="@+id/start_activity_image4"
            style="@style/ImageStart"
            android:contentDescription="@string/comedy_from_ussr_about_ivan_iv"
            android:src="@drawable/ivan" />

    </com.google.android.material.card.MaterialCardView>

    <ProgressBar
        android:id="@+id/progress_bar"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="16dp"
        android:layout_margin="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>

